--- a/film.html
+++ b/film.html
@@ -87,7 +87,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 The Middle Earth Fan Site | Designed by YourName</p>
+        <p>&copy; 2024 The Middle Earth Fan Site | Designed by Catalin</p>
     </footer>
 
     <script src="scripts.js"></script>
