--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="overlay">
-            <h2>Explore the Enchanting World of Tolkien</h2>
+            <h2>Explore the World of Tolkien</h2>
     </section>
     
     <section class="video-section">
